--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,13 @@
     <!-- Header -->
     <header id="header">
         <a href="index.html" class="logo">Casey McCollum</a>
+        <button id="mobileMenuToggle" class="mobile-menu-toggle">
+            <i class="fas fa-bars"></i>
+        </button>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html" class="active">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -50,7 +52,7 @@
         
         <!-- Featured Project - Only shown in ALL category -->
         <section class="featured-project" data-category="all">
-            <div class="featured-header">FEATURED PROJECT</div>
+            <div class="featured-header">Featured Project</div>
             <div class="featured-content">
                 <div class="featured-video">
                     <div class="responsive-embed">
@@ -58,14 +60,14 @@
                     </div>
                 </div>
                 <div class="featured-details">
-                    <h2>Agricultural Innovations Documentary</h2>
+                    <h2>KINGPINS: Ballin' Ain't Easy</h2>
                     <span class="category-tag">VIDEO</span>
                     <p>This 30-minute documentary explores sustainable farming practices in Vietnam and Thailand, showcasing how traditional techniques are being combined with modern technology to address food security challenges in Southeast Asia.</p>
                     <span class="project-data" 
                           data-type="video" 
                           data-title="Agricultural Innovations Documentary" 
                           data-category="VIDEO" 
-                          data-embed="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                          data-embed="https://www.youtube.com/embed/4FnlO7Ek3jU?si=cllzobp0prWv7r8b" 
                           data-description="This 30-minute documentary explores sustainable farming practices in Vietnam and Thailand, showcasing how traditional techniques are being combined with modern technology to address food security challenges in Southeast Asia. The film follows farmers, agricultural scientists, and community leaders as they implement innovative solutions to increase crop yields while reducing environmental impact.
 
 The documentary also examines the economic and social implications of these agricultural innovations, highlighting how they are helping to build more resilient communities and improve food security across the region. Through interviews and on-the-ground footage, the film provides an in-depth look at the challenges and opportunities facing modern agriculture in Southeast Asia."></span>
