--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <div class="featured-content">
                 <div class="featured-video">
                     <div class="responsive-embed">
-                        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/4FnlO7Ek3jU?si=cllzobp0prWv7r8b" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="featured-details">
