Updating some files

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         <!-- Mission Statement -->
         <section class="mission-statement">
-            <p>I'm passionate about making complex issues accessible and helping firms navigate brand strategy and marketing across cultural contexts.</p>
+            <p>I'm passionate about making complex topics accessible and helping firms navigate brand strategy and marketing across cultural contexts.</p>
         </section>
         
         <!-- Experience Cards -->
