--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         <!-- Portfolio Header -->
         <section class="portfolio-header">
             <h1>My Portfolio</h1>
-            <p>A collection of my work in video production, photography, design, and written research across various industries and cultural contexts.</p>
+            <p>A collection of my work in video production, photography, design, and written research.</p>
         </section>
         
         <!-- Portfolio Categories -->
@@ -62,15 +62,13 @@
                 <div class="featured-details">
                     <h2>KINGPINS: Ballin' Ain't Easy</h2>
                     <span class="category-tag">VIDEO</span>
-                    <p>This 30-minute documentary explores sustainable farming practices in Vietnam and Thailand, showcasing how traditional techniques are being combined with modern technology to address food security challenges in Southeast Asia.</p>
+                    <p>This 12-minute short documentary offers a glimpse into the wild world of competitive pinball, tracking the evolution of the competitive game from the early years to the contemporary era. Narrated by Escher Lefkoff, the #1 pinball player in the world, and his father Adam Lefkoff, a great pinball player in his own right. Directed and edited by myself.</p>
                     <span class="project-data" 
                           data-type="video" 
-                          data-title="Agricultural Innovations Documentary" 
+                          data-title="KINGPINS: Ballin' Ain't Easy" 
                           data-category="VIDEO" 
                           data-embed="https://www.youtube.com/embed/4FnlO7Ek3jU?si=cllzobp0prWv7r8b" 
-                          data-description="This 30-minute documentary explores sustainable farming practices in Vietnam and Thailand, showcasing how traditional techniques are being combined with modern technology to address food security challenges in Southeast Asia. The film follows farmers, agricultural scientists, and community leaders as they implement innovative solutions to increase crop yields while reducing environmental impact.
-
-The documentary also examines the economic and social implications of these agricultural innovations, highlighting how they are helping to build more resilient communities and improve food security across the region. Through interviews and on-the-ground footage, the film provides an in-depth look at the challenges and opportunities facing modern agriculture in Southeast Asia."></span>
+                          data-description="This 12-minute short documentary offers a glimpse into the wild world of competitive pinball, tracking the evolution of the competitive game from the early years to the contemporary era. Narrated by Escher Lefkoff, the #1 pinball player in the world, and his father Adam Lefkoff, a great pinball player in his own right. Directed and edited by myself."></span>
                 </div>
             </div>
         </section>
@@ -80,37 +78,35 @@ The documentary also examines the economic and social implications of these agri
             <!-- Video Item 1 -->
             <div class="portfolio-item" data-category="video">
                 <div class="portfolio-item-image video-thumbnail">
-                    <img src="images/portfolio-video-1.jpg" alt="Documentary film scene in rural Asia">
+                    <img src="images/portfolio-video-1.jpg" alt="Documentary film scene of pinball">
                 </div>
                 <div class="portfolio-item-content">
-                    <h3>Agricultural Innovations in Southeast Asia</h3>
+                    <h3>KINGPINS: Ballin' Ain't Easy</h3>
                     <div class="category">VIDEO</div>
-                    <p>A 30-minute documentary exploring sustainable farming practices in Vietnam and Thailand.</p>
+                    <p>This 12-minute short documentary offers a glimpse into the wild world of competitive pinball, tracking the evolution of the competitive game from the early years to the contemporary era.</p>
                     <span class="project-data" 
                           data-type="video" 
-                          data-title="Agricultural Innovations in Southeast Asia" 
+                          data-title="KINGPINS: Ballin' Ain't Easy" 
                           data-category="VIDEO" 
-                          data-embed="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-                          data-description="This 30-minute documentary explores sustainable farming practices in Vietnam and Thailand, showcasing how traditional techniques are being combined with modern technology to address food security challenges in Southeast Asia. The film follows farmers, agricultural scientists, and community leaders as they implement innovative solutions to increase crop yields while reducing environmental impact.
-
-The documentary also examines the economic and social implications of these agricultural innovations, highlighting how they are helping to build more resilient communities and improve food security across the region. Through interviews and on-the-ground footage, the film provides an in-depth look at the challenges and opportunities facing modern agriculture in Southeast Asia."></span>
+                          data-embed="https://www.youtube.com/embed/4FnlO7Ek3jU?si=cllzobp0prWv7r8b" 
+                          data-description="This 12-minute short documentary offers a glimpse into the wild world of competitive pinball, tracking the evolution of the competitive game from the early years to the contemporary era. Narrated by Escher Lefkoff, the #1 pinball player in the world, and his father Adam Lefkoff, a great pinball player in his own right. Directed and edited by myself."></span>
                 </div>
             </div>
             
             <!-- Written Item 1 -->
             <div class="portfolio-item" data-category="written">
                 <div class="portfolio-item-image">
-                    <img src="images/portfolio-written-1.jpg" alt="Policy paper header image">
+                    <img src="images/portfolio-written-1.png" alt="Policy paper header image">
                 </div>
                 <div class="portfolio-item-content">
-                    <h3>Urban Development in Latin American Economies</h3>
+                    <h3>The Politics of War Memory in East Asia and its Impact on Economic Security Policy</h3>
                     <div class="category">WRITTEN</div>
                     <p>Analysis of urban planning initiatives in rapidly developing Latin American cities.</p>
                     <span class="project-data" 
                           data-type="written" 
-                          data-title="Urban Development in Latin American Economies" 
+                          data-title="The Politics of War Memory in East Asia and its Impact on Economic Security Policy" 
                           data-category="WRITTEN" 
-                          data-embed="pdfs/urban-development.pdf" 
+                          data-embed="pdfs/warmemory-economicsecurity.pdf" 
                           data-description="This research paper analyzes urban planning initiatives in rapidly developing Latin American cities, with a focus on how these initiatives are shaping economic development and social equity. The paper examines case studies from cities in Brazil, Colombia, and Mexico, identifying successful strategies and common challenges in urban development.
 
 The analysis draws on a combination of quantitative economic data and qualitative research on community impacts, offering insights into how urban planning can contribute to more sustainable and equitable economic growth in the region. The paper concludes with policy recommendations for urban planners and policymakers working in similar contexts."></span>
@@ -143,14 +139,14 @@ Each episode explores a different aspect of global tech leadership, from managin
                     <img src="images/portfolio-written-2.jpg" alt="Journal publication cover">
                 </div>
                 <div class="portfolio-item-content">
-                    <h3>Media Representation in International Trade</h3>
+                    <h3>A History of Jewish Americans & Jewish Community in the Phoenix, Arizona Area</h3>
                     <div class="category">WRITTEN</div>
-                    <p>Published research on how media narratives influence international trade negotiations.</p>
+                    <p>Research paper on the development of the Jewish community in Arizona.</p>
                     <span class="project-data" 
                           data-type="written" 
-                          data-title="Media Representation in International Trade" 
+                          data-title="A History of Jewish Americans & Jewish Community in the Phoenix, Arizona Area" 
                           data-category="WRITTEN" 
-                          data-embed="pdfs/media-representation.pdf" 
+                          data-embed="pdfs/jewish-arizona-paper.pdf" 
                           data-description="This academic paper examines the role of media narratives in shaping public perception and influencing international trade negotiations. The research analyzes media coverage of trade agreements in both Western and Asian publications, identifying patterns in how economic policies are framed and how these framings impact public opinion and political decision-making.
 
 The paper includes a quantitative analysis of media representation across multiple countries and case studies of specific trade agreements where media coverage played a significant role in the negotiation process. The findings suggest that media framing has substantial influence on the trajectory and outcomes of international trade discussions."></span>
@@ -190,7 +186,7 @@ Each photograph in the series is framed to emphasize the dialogue between old an
                           data-type="design" 
                           data-title="EcoTech Brand Identity" 
                           data-category="DESIGN" 
-                          data-embed="images/ecotech-brand.png" 
+                          data-embed="images/colorado_symphony_1_front.png" 
                           data-description="This comprehensive brand identity project was created for EcoTech, a startup focused on developing sustainable technology solutions for energy conservation. The design process began with extensive research into the sustainable technology sector, followed by concept development that aimed to communicate the company's values of innovation, responsibility, and environmental stewardship.
 
 The final brand package includes a distinctive logo, color palette, typography system, and application guidelines for both digital and print materials. The visual identity balances technological precision with organic elements, creating a unique brand language that differentiates EcoTech in the marketplace while clearly communicating their mission of creating technology that works in harmony with the natural world."></span>
