Updated page functionality and added content to portfolio modules

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casey McCollum - Video Producer and Researcher</title>
+    <title>Casey McCollum</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Using Inter as a close alternative to Neue Haas Grotesk, and EB Garamond for Garamond -->
@@ -46,7 +46,10 @@
             </div>
             
             <div class="intro-text">
-                <h1>Video producer and researcher based in the California Bay Area & Denver, Colorado.</h1>
+                <h1>Video producer & international relations student based in the Bay Area & Denver.</h1>
+                <div class="more-about-link">
+                    <a href="about.html">more about Casey <i class="fas fa-arrow-right"></i></a>
+                </div>
             </div>
             <div class="intro-image">
                 <img src="images/profile-photo.jpg" alt="Casey McCollum taking photos in a snowy mountain landscape">
@@ -61,12 +64,12 @@
         <!-- Experience Cards -->
         <section class="experience-section">
             <div class="experience-card">
-                <h2>M.A. in international relations with a focus on East Asian & Latin American development</h2>
-                <a href="written-work.html" class="btn">View My Written Work</a>
+                <h2>Master of Arts in international relations // focus on East Asian & Latin America</h2>
+                <a href="portfolio.html#written" class="btn">View My Written Work</a>
             </div>
             <div class="experience-card">
-                <h2>B.A. in media production with an emphasis on documentary film and storytelling</h2>
-                <a href="visual-work.html" class="btn">View My Visual Work</a>
+                <h2>Bachelor of Arts in media production // emphasis on documentary film</h2>
+                <a href="portfolio.html#video" class="btn">View My Visual Work</a>
             </div>
         </section>
         
@@ -75,9 +78,8 @@
             <h2>Connect with Casey</h2>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/caseymcc" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://substack.com/@yourprofile" aria-label="Substack"><i class="fas fa-newspaper"></i></a>
-                <a href="https://behance.net/yourprofile" aria-label="Behance"><i class="fab fa-behance"></i></a>
-                <a href="https://vimeo.com/yourprofile" aria-label="Vimeo"><i class="fab fa-vimeo-v"></i></a>
+                <a href="https://substack.com/@casey4" aria-label="Substack"><i class="fas fa-newspaper"></i></a>
+                <a href="https://www.goodreads.com/user/show/187502414-casey" aria-label="Goodreads"><i class="fa-brands fa-goodreads-g"></i></a>
             </div>
         </section>
     </main>
