--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
         </button>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about/">About</a></li>
+                <li><a href="portfolio/">Portfolio</a></li>
+                <li><a href="contact/">Contact</a></li>
             </ul>
         </nav>
     </header>
