--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Experience Cards -->
         <section class="experience-section">
             <div class="experience-card">
-                <h2>Master of Arts in international relations // focus on East Asian & Latin America</h2>
+                <h2>Master of Arts in international relations // focus on East Asia & Latin America</h2>
                 <a href="portfolio.html#written" class="btn">View My Written Work</a>
             </div>
             <div class="experience-card">
