--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
             <!-- Written Item 1 -->
             <div class="portfolio-item" data-category="written">
                 <div class="portfolio-item-image">
-                    <img src="images/portfolio-written-1.JPG" alt="Journal publication cover">
+                    <img src="images/portfolio-written-1.jpg" alt="Journal publication cover">
                 </div>
                 <div class="portfolio-item-content">
                     <h3>A History of Jewish Americans & Jewish Community in the Phoenix, Arizona Area</h3>
@@ -148,7 +148,7 @@
             <!-- Written Item 2 -->
             <div class="portfolio-item" data-category="written">
                 <div class="portfolio-item-image">
-                    <img src="images/portfolio-written-2.JPG" alt="Policy paper header image">
+                    <img src="images/portfolio-written-2.jpg" alt="Policy paper header image">
                 </div>
                 <div class="portfolio-item-content">
                     <h3>On the Populist Challenge to the International Order</h3>
