updated narrow boyz desc

--- a/portfolio.html
+++ b/portfolio.html
@@ -203,11 +203,11 @@
                     <p>Two legends climb rocks for 16 hours, and I was lucky enough to document it on a camcorder.</p>
                     <span class="project-data" 
                           data-type="video" 
-                          data-title="TO BE DETERMINED" 
+                          data-title="The Narrow Boyz Take on Climbathon" 
                           data-category="VIDEO" 
                           data-client-type="PERSONAL"
                           data-embed="https://www.youtube.com/embed/l1-0MqzyobM?si=nE2dE3W0EiUTK_xq" 
-                          data-description="TO BE DETERMINED"></span>
+                          data-description="Two legends climb rocks for 16 hours, and I was lucky enough to document it on a camcorder."></span>
                 </div>
             </div>
 
