--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <!-- Portfolio Header -->
         <section class="portfolio-header">
             <h1>My Portfolio</h1>
-            <p>A collection of my work in video production, photography, design, and written research.</p>
+            <p>A collection of my work in video production, <!-- photography -->, design, and written research.</p>
         </section>
         
         <!-- Portfolio Categories -->
