updated masters degree desc

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                 <div class="education-card">
                     <h3>Master of Arts in International Relations</h3>
                     <div class="institution">San Francisco State University</div>
-                    <div class="year">2025 - 2026</div>
+                    <div class="year">2025 - 2026 (In Progress)</div>
                     <p></p>
                 </div>
                 
