janky fix to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,11 @@
             <div class="portfolio-category" data-filter="design">DESIGN</div>
             <div class="portfolio-category" data-filter="written">WRITTEN</div>
         </div> -->
+
+        <div class="portfolio-categories" aria-hidden="true">
+        <div class="portfolio-category active" data-filter="video">VIDEO</div>
+        </div>
+
         
         <!-- Featured Project - Only shown in ALL category -->
         <section class="featured-project" data-category="all">
@@ -430,8 +435,8 @@
                         data-gallery="images/trash-panda-1.jpg,images/trash-panda-2.jpg,images/trash-panda-3.jpg,images/trash-panda-4.jpg,images/trash-panda-5.jpg" 
                         data-description="Brand identity and packaging for blueberries from a hypothetical dried fruit company, centered around the noble racoon."></span>
                 </div>
-            </div>
-        </div> -->
+            </div> -->
+        </div>
     </main>
     
     <!-- Project Modal -->
