--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         <!-- Mission Statement -->
         <section class="mission-statement">
-            <p>I'm interested in helping businesses and individuals strengthen brand identity and communication through video.</p>
+            <p>I help businesses and individuals strengthen brand identity and communication through video.</p>
         </section>
         
         <!-- Experience Cards -->
