--- a/portfolio.html
+++ b/portfolio.html
@@ -58,27 +58,27 @@
         
         <!-- Featured Project - Only shown in ALL category -->
         <section class="featured-project" data-category="all">
-            <div class="featured-header">Featured Project</div>
+            <div class="featured-header">Casey McCollum | 2025 Showreel</div>
             <div class="featured-content">
                 <div class="featured-video">
                     <div class="responsive-embed">
-                        <iframe src="https://www.youtube.com/embed/4FnlO7Ek3jU?si=cllzobp0prWv7r8b" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://player.vimeo.com/video/1129389827?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="featured-details">
-                    <h2>KINGPINS: Ballin' Ain't Easy</h2>
+                    <h2>Casey McCollum | 2025 Showreel</h2>
                     <div class="category-tags">
                         <span class="category-tag">VIDEO</span>
                         <span class="client-type personal">PERSONAL</span>
                     </div>
-                    <p>This 12-minute short documentary featuring the world's #1 pinball player, Escher Lefkoff, offers a glimpse into the wild world of competitive pinball, tracking the evolution of the game from the early years through today.
+                    <p>Featuring university work, personal projects, and client work for Dr. Izzy Sealey. Explainer & educational videos are my specialty, but I love finding creative ways to add flare to any project.
                     <span class="project-data" 
                           data-type="video" 
-                          data-title="KINGPINS: Ballin' Ain't Easy" 
+                          data-title="Casey McCollum | 2025 Showreel" 
                           data-category="VIDEO" 
                           data-client-type="PERSONAL"
-                          data-embed="https://www.youtube.com/embed/4FnlO7Ek3jU?si=cllzobp0prWv7r8b" 
-                          data-description="This 12-minute short documentary offers a glimpse into the wild world of competitive pinball, tracking the evolution of the competitive game from the early years to the contemporary era. Narrated by Escher Lefkoff, the #1 pinball player in the world, and his father Adam Lefkoff, a great pinball player in his own right. Directed and edited by myself."></span>
+                          data-embed="https://player.vimeo.com/video/1129389827?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+                          data-description="My editing & motion design showreel for 2025. Featuring university work, personal projects, and client work for Dr. Izzy Sealey.Explainer / educational videos are my specialty, but I love finding creative ways to add flare to any project."></span>
                 </div>
             </div>
         </section>
