--- a/portfolio.html
+++ b/portfolio.html
@@ -128,26 +128,26 @@
                           data-description="This educational video explains the differences between the major East Asian languages. Produced & edited."></span>
                 </div>
             </div>
-            
+
             <!-- Video Item 3 -->
             <div class="portfolio-item" data-category="video">
                 <div class="portfolio-item-image video-thumbnail">
-                    <img src="images/portfolio-video-2.jpg" alt="Jerry's Children in Concert">
+                    <img src="images/mario-origin-thumbnail.png" alt="Mario Saved Gaming">
                 </div>
                 <div class="portfolio-item-content">
-                    <h3>Jerry's Children & Spring Rush: A Boulder Portrait</h3>
+                    <h3>Mario's Origin Story</h3>
                     <div class="category-tags">
                         <div class="category">VIDEO</div>
                         <div class="client-type personal">PERSONAL</div>
                     </div>
-                    <p>A documentary film co-directed with Matt Solari featuring two student bands at the University of Colorado Boulder.</p>
+                    <p>A project on one of my favorite chapters of gaming history including research, narration, and motion graphics.</p>
                     <span class="project-data" 
                           data-type="video" 
-                          data-title="Jerry's Children & Spring Rush: A Boulder Portrait" 
+                          data-title="Mario's Origin Story" 
                           data-category="VIDEO" 
                           data-client-type="PERSONAL"
-                          data-embed="https://www.youtube.com/embed/nMs7eJ_X0wU?si=E5qpqSYiNxX368cB" 
-                          data-description="A documentary film co-directed with Matt Solari featuring two student bands at the University of Colorado Boulder."></span>
+                          data-embed="https://www.youtube.com/embed/azXUAjEQ_NM?si=94P0m8kHIuq1xicG" 
+                          data-description="A project on one of my favorite chapters of gaming history including research, narration, and motion graphics."></span>
                 </div>
             </div>
 
@@ -176,28 +176,6 @@
             <!-- Video Item 5 -->
             <div class="portfolio-item" data-category="video">
                 <div class="portfolio-item-image video-thumbnail">
-                    <img src="images/portfolio-video-3.jpg" alt="Brand campaign visuals">
-                </div>
-                <div class="portfolio-item-content">
-                    <h3>The Narrow Boyz Take on Climbathon</h3>
-                    <div class="category-tags">
-                        <div class="category">VIDEO</div>
-                        <div class="client-type personal">PERSONAL</div>
-                    </div>
-                    <p>Two legends climb rocks for 16 hours, and I was lucky enough to document it on a camcorder.</p>
-                    <span class="project-data" 
-                          data-type="video" 
-                          data-title="The Narrow Boyz Take on Climbathon" 
-                          data-category="VIDEO" 
-                          data-client-type="PERSONAL"
-                          data-embed="https://www.youtube.com/embed/l1-0MqzyobM?si=nE2dE3W0EiUTK_xq" 
-                          data-description="Two legends climb rocks for 16 hours, and I was lucky enough to document it on a camcorder."></span>
-                </div>
-            </div>
-
-            <!-- Video Item 6 -->
-            <div class="portfolio-item" data-category="video">
-                <div class="portfolio-item-image video-thumbnail">
                     <img src="images/portfolio_izzy_2.jpg" alt="Person sitting with books">
                 </div>
                 <div class="portfolio-item-content">
@@ -216,6 +194,50 @@
                           data-description="This educational video highlights the importance of mindset in your approach to language learning. Produced & edited."></span>
                 </div>
             </div>
+
+            <!-- Video Item 6 -->
+            <div class="portfolio-item" data-category="video">
+                <div class="portfolio-item-image video-thumbnail">
+                    <img src="images/portfolio-video-2.jpg" alt="Jerry's Children in Concert">
+                </div>
+                <div class="portfolio-item-content">
+                    <h3>Jerry's Children & Spring Rush: A Boulder Portrait</h3>
+                    <div class="category-tags">
+                        <div class="category">VIDEO</div>
+                        <div class="client-type personal">PERSONAL</div>
+                    </div>
+                    <p>A documentary film co-directed with Matt Solari featuring two student bands at the University of Colorado Boulder.</p>
+                    <span class="project-data" 
+                          data-type="video" 
+                          data-title="Jerry's Children & Spring Rush: A Boulder Portrait" 
+                          data-category="VIDEO" 
+                          data-client-type="PERSONAL"
+                          data-embed="https://www.youtube.com/embed/nMs7eJ_X0wU?si=E5qpqSYiNxX368cB" 
+                          data-description="A documentary film co-directed with Matt Solari featuring two student bands at the University of Colorado Boulder."></span>
+                </div>
+            </div>
+
+            <!-- Video Item 7
+            <div class="portfolio-item" data-category="video">
+                <div class="portfolio-item-image video-thumbnail">
+                    <img src="images/portfolio-video-3.jpg" alt="Brand campaign visuals">
+                </div>
+                <div class="portfolio-item-content">
+                    <h3>The Narrow Boyz Take on Climbathon</h3>
+                    <div class="category-tags">
+                        <div class="category">VIDEO</div>
+                        <div class="client-type personal">PERSONAL</div>
+                    </div>
+                    <p>Two legends climb rocks for 16 hours, and I was lucky enough to document it on a camcorder.</p>
+                    <span class="project-data" 
+                          data-type="video" 
+                          data-title="The Narrow Boyz Take on Climbathon" 
+                          data-category="VIDEO" 
+                          data-client-type="PERSONAL"
+                          data-embed="https://www.youtube.com/embed/l1-0MqzyobM?si=nE2dE3W0EiUTK_xq" 
+                          data-description="Two legends climb rocks for 16 hours, and I was lucky enough to document it on a camcorder."></span>
+                </div>
+            </div> -->
 
             <!-- Written Item 1
             <div class="portfolio-item" data-category="written">
